syntax = "proto3";

package transactions;

service Transactions {
    rpc GetTransactionsByAccount (GetTransactionsByAccountRequest) returns (GetTransactionsByAccountResponse) {}
}

message GetTransactionsByAccountRequest {
    string account_id = 1;
}

message GetTransactionsByAccountResponse {
    repeated Transaction transactions = 1;
}

message Transaction {
    string id = 1;
    string source = 2;
    uint32 value = 3;
    string date = 4;
    PaymentMethod payment_method = 5;
    string accountId = 6;
    string userId = 7;
    repeated TransactionDetail details = 8;
}

message TransactionDetail {
    string id = 1;
    uint32 quantity = 2;
    string name = 3;
    int32 value = 4;
    Category category = 5;
    uint32 total = 6;
    uint32 unitValue = 7;
    string brand = 8;
}

enum PaymentMethod {
    CREDIT = 0;
    DEBIT = 1;
    CASH = 2;
}

enum Category {
    GROCERIES = 0;
    FOOD = 1;
    CLOTHS = 2;
    PETS = 3;
    HOUSE = 4;
}